Show tooltips as left as possibly to avoid a cut off at the right side. Since they nevertheless cause a scrollbar I hide all overflow within the viewer.

--- a/modules/bim/app/assets/stylesheets/bim/ifc_viewer/generic.sass
+++ b/modules/bim/app/assets/stylesheets/bim/ifc_viewer/generic.sass
@@ -56,6 +56,7 @@
   width: 100%
   height: 100%
   padding-bottom: 10px
+  overflow: hidden
 
 .ifc-model-viewer--model-canvas
   width: 100%
